[gd_scene load_steps=3 format=3 uid="uid://cn5qxa5uqvf8r"]

[ext_resource type="Script" uid="uid://br718eijetu3x" path="res://scenes/menu/ui/options/option_bar.gd" id="1_jnjws"]
[ext_resource type="FontFile" uid="uid://3lcboqej2ls6" path="res://assets/ui/fonts/monoMMM_5.ttf" id="2_ogmyb"]

[node name="options_bar" type="Control"]
layout_mode = 3
anchor_right = 0.516
anchor_bottom = 0.069
offset_right = -0.480042
offset_bottom = 0.319996
script = ExtResource("1_jnjws")

[node name="name_label" type="Label" parent="."]
layout_mode = 1
offset_left = 5.0
offset_right = 245.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("2_ogmyb")
text = "Setting"
vertical_alignment = 1

[node name="value_group" type="Control" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 50.0
grow_horizontal = 0

[node name="value_name" type="Label" parent="value_group"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.5
offset_top = 4.0
offset_right = 19.5
offset_bottom = 44.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_ogmyb")
theme_override_font_sizes/font_size = 20
text = "N/A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="value_bar" type="ColorRect" parent="value_group"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -4.0
offset_right = 25.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="values" type="HBoxContainer" parent="value_group"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -4.0
offset_right = -100.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
